--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,10 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.huawei.agconnect'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'com.huawei.agconnect'
+agcp{
+    mappingUpload = true
+}
 
 android {
     compileSdkVersion 30
@@ -21,7 +24,7 @@ android {
         minSdkVersion 23
         targetSdkVersion 30
         versionCode 4
-        versionName "1.0.0"
+        versionName "1.0.1"
     }
 
     buildTypes {
@@ -43,21 +46,21 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.1'
+    implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
 
     implementation 'com.jakewharton.timber:timber:4.7.1'
     implementation 'com.github.sephiroth74:android-target-tooltip:2.0.4'
 
-    def camerax_version = "1.0.0-beta10"
+    def camerax_version = "1.0.0-beta11"
     implementation "androidx.camera:camera-camera2:$camerax_version"
     implementation "androidx.camera:camera-lifecycle:$camerax_version"
-    implementation "androidx.camera:camera-view:1.0.0-alpha17"
+    implementation "androidx.camera:camera-view:1.0.0-alpha18"
 
-    implementation 'androidx.activity:activity-ktx:1.2.0-alpha08'
-    implementation 'androidx.fragment:fragment-ktx:1.3.0-alpha08'
+    implementation 'androidx.activity:activity-ktx:1.2.0-beta01'
+    implementation 'androidx.fragment:fragment-ktx:1.3.0-beta01'
 
     implementation "androidx.preference:preference-ktx:1.1.1"
 
@@ -67,6 +70,9 @@ dependencies {
     implementation 'com.huawei.hms:ml-computer-translate:2.0.3.300'
     implementation 'com.huawei.hms:ml-computer-translate-model:2.0.3.300'
     implementation 'com.huawei.hms:ml-computer-voice-tts:2.0.2.300'
+
+    implementation 'com.huawei.hms:hianalytics:5.0.3.300'
+    implementation 'com.huawei.agconnect:agconnect-crash:1.4.1.300'
 
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
