--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,31 +48,31 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
+    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
     implementation 'com.jakewharton.timber:timber:4.7.1'
     implementation 'com.github.sephiroth74:android-target-tooltip:2.0.4'
 
-    def camerax_version = "1.0.0-beta11"
+    def camerax_version = "1.1.0-alpha03"
     implementation "androidx.camera:camera-camera2:$camerax_version"
     implementation "androidx.camera:camera-lifecycle:$camerax_version"
-    implementation "androidx.camera:camera-view:1.0.0-alpha18"
+    implementation "androidx.camera:camera-view:1.0.0-alpha23"
 
-    implementation 'androidx.activity:activity-ktx:1.2.0-beta01'
-    implementation 'androidx.fragment:fragment-ktx:1.3.0-beta01'
+    implementation 'androidx.activity:activity-ktx:1.3.0-alpha05'
+    implementation 'androidx.fragment:fragment-ktx:1.3.2'
 
     implementation "androidx.preference:preference-ktx:1.1.1"
 
-    implementation 'com.huawei.hms:ml-computer-vision-ocr-latin-model:2.0.1.300'
-    implementation 'com.huawei.hms:ml-computer-vision-ocr-cn-model:2.0.1.300'
-    implementation 'com.huawei.hms:ml-computer-vision-ocr:2.0.1.300'
+    implementation 'com.huawei.hms:ml-computer-vision-ocr-latin-model:2.0.5.300'
+    implementation 'com.huawei.hms:ml-computer-vision-ocr-cn-model:2.0.5.300'
+    implementation 'com.huawei.hms:ml-computer-vision-ocr:2.0.5.300'
     implementation 'com.huawei.hms:ml-computer-translate:2.0.3.300'
     implementation 'com.huawei.hms:ml-computer-translate-model:2.0.3.300'
     implementation 'com.huawei.hms:ml-computer-voice-tts:2.0.2.300'
 
-    implementation 'com.huawei.hms:hianalytics:5.0.3.300'
-    implementation 'com.huawei.agconnect:agconnect-crash:1.4.1.300'
+    implementation 'com.huawei.hms:hianalytics:5.0.5.300'
+    implementation 'com.huawei.agconnect:agconnect-crash:1.4.2.301'
 
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
