--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,17 +59,23 @@ dependencies {
     implementation "androidx.camera:camera-lifecycle:$camerax_version"
     implementation "androidx.camera:camera-view:1.0.0-alpha23"
 
-    implementation 'androidx.activity:activity-ktx:1.3.0-alpha05'
+    implementation 'androidx.activity:activity-ktx:1.3.0-alpha06'
     implementation 'androidx.fragment:fragment-ktx:1.3.2'
 
     implementation "androidx.preference:preference-ktx:1.1.1"
 
-    implementation 'com.huawei.hms:ml-computer-vision-ocr-latin-model:2.0.5.300'
-    implementation 'com.huawei.hms:ml-computer-vision-ocr-cn-model:2.0.5.300'
-    implementation 'com.huawei.hms:ml-computer-vision-ocr:2.0.5.300'
-    implementation 'com.huawei.hms:ml-computer-translate:2.0.3.300'
-    implementation 'com.huawei.hms:ml-computer-translate-model:2.0.3.300'
-    implementation 'com.huawei.hms:ml-computer-voice-tts:2.0.2.300'
+    implementation 'com.huawei.hms:ml-computer-vision-ocr-latin-model:2.0.5.301'
+    implementation 'com.huawei.hms:ml-computer-vision-ocr-cn-model:2.0.5.301'
+    implementation 'com.huawei.hms:ml-computer-vision-ocr:2.0.5.301'
+
+    implementation 'com.huawei.hms:ml-computer-translate:2.2.0.300'
+    implementation 'com.huawei.hms:ml-computer-translate-model:2.2.0.300'
+
+    implementation 'com.huawei.hms:ml-computer-voice-tts:2.2.0.300'
+    // Import the bee voice package.
+    implementation 'com.huawei.hms:ml-computer-voice-tts-model-bee:2.2.0.300'
+    // Import the eagle voice package.
+    implementation 'com.huawei.hms:ml-computer-voice-tts-model-eagle:2.2.0.300'
 
     implementation 'com.huawei.hms:hianalytics:5.0.5.300'
     implementation 'com.huawei.agconnect:agconnect-crash:1.4.2.301'
