--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-feature android:name="android.hardware.camera.any" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:name=".App"
@@ -29,7 +30,7 @@
 
         <meta-data
             android:name="com.huawei.hms.ml.DEPENDENCY"
-            android:value= "ocr, translate"/>
+            android:value= "ocr, translate, tts"/>
 
     </application>
 
