--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,8 @@ dependencies {
     implementation 'com.jakewharton.timber:timber:4.7.1'
     implementation 'com.github.sephiroth74:android-target-tooltip:2.0.4'
 
+    implementation "org.koin:koin-android:2.2.2"
+
     def camerax_version = "1.1.0-alpha03"
     implementation "androidx.camera:camera-camera2:$camerax_version"
     implementation "androidx.camera:camera-lifecycle:$camerax_version"
